feat(v2-api): add transaction processements